# 3rd-party-localize

./: .gitignore  README.md
CXSparse/: CMakeLists.txt  README_localize.txt
CXSparse/Include/: SuiteSparse_config.h
NavChipSDK/: CMakeLists.txt
NavChipSDK/include/NavChipSDK/: NavChip.h  OS_Layer.h
NavChipSDK/src/: NavChip.cpp  OS_Linux.cpp
PBMLIB/: CMakeLists.txt  pbmpak.c  pbmpak.h
Pangolin/: CMakeLists.txt  info.txt
Pangolin/src/: CMakeLists.txt
SceneGraph/: CMakeLists.txt  info.txt
SceneGraph/cmake_modules/: FindPangolin.cmake
build-scripts/: boost.sh  boost_android.sh  boost_apple.sh  boost_config.sh  boost_linux.sh  build-all-cmake-projects.sh  build-boost.sh  build-cmake-projects.sh  gmock.sh  install-geos.sh  install-gmock.sh  install-msgpack.sh  install-navchipsdk.sh  install-pbmlib.sh  install-tbb.sh  pbmlib.sh  tbb.sh
build-scripts/boost-build-scripts/: boost_apple.sh  boost_config.sh  boost_linux.sh  build-boost.sh
build-scripts/install-scripts/: install-ceres.sh  install-cxsparse.sh  install-geos.sh  install-glew.sh  install-gmock.sh  install-msgpack.sh  install-navchipsdk.sh  install-pangolin.sh  install-pbmlib.sh  install-scenegraph.sh  install-tbb.sh  install-visensor.sh
cmake/toolchain/: android.toolchain.cmake  ios.simulator.toolchain.cmake  ios.toolchain.cmake  linux-gcc-4.9.2.toolchain.cmake  linux-gcc.toolchain.cmake  linux-llvm.toolchain.cmake  macosx.toolchain.cmake
cmake/toolchain/config/: android-config.cmake  apple-config.cmake  c++-config.cmake  ios-config.cmake  linux-gcc-4.9.2.config.cmake  linux-gcc-config.cmake  linux-llvm-config.cmake  macosx-config.cmake
glew-1.13.0/: CMakeLists.txt
intel_tbb_42_20140601oss/: CMakeLists.txt
intel_tbb_42_20140601oss/cmake/: TBBConfig.cmake.in  version_string.ver
libvisensor/: CMakeLists.txt
libvisensor/include/networking/: ip_data_definitions.hpp
msgpack-c/: CMakeLists.txt
msgpack-c/src/msgpack/: pack_template.h  unpack_template.h
